--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Heritage Consultants">
 	<main>
 		<h1>Welcome to <span class="text-gradient">Heritage Consulants</span></h1>
 	</main>
