--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,12 @@
 ---
+import Nav from '../components/Nav.astro';
 export interface Props {
 	title: string;
+	pageForHeader: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title , pageForHeader, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -13,9 +16,11 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content={description}>
 		<title>{title}</title>
 	</head>
 	<body>
+		<Nav currentPage={pageForHeader}></Nav>
 		<main>
 			<slot />
 		</main>
@@ -33,6 +38,9 @@ const { title } = Astro.props;
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
+	}
+	body {
+		margin:0px;
 	}
 	main {
 		margin: auto;
