--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,11 +5,11 @@ export interface Props {
 	pageForHeader: string;
 	description: string;
 }
-import '@fontsource/Roboto';
-import '@fontsource/Roboto/100.css';
-import '@fontsource/Roboto/400.css';
-import '@fontsource/Roboto/500.css';
-import '@fontsource/Roboto/700.css';
+
+import '@fontsource/roboto/100.css';
+import '@fontsource/roboto/400.css';
+import '@fontsource/roboto/500.css';
+import '@fontsource/roboto/700.css';
 
 const { title , pageForHeader, description } = Astro.props;
 ---
