--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        background-image:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/field.webp');
+        /* background-image:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/field.webp'); */
     }
 
     #hero > h1 {
