--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<div id="hero" style="background-image:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/field.webp');">
+<div id="hero">
     <h1>Learn from the Past <br> Plan for the Future</h1>
     <p>HERITAGE CONSULTANTS, A LEADER IN <br>CULTURAL RESOURCE MANAGEMENT</p>
     <div id="hero--buttons">
@@ -22,7 +22,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        /*  */
+        background-image:linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/field.webp');
     }
 
     #hero > h1 {
