--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,8 @@ const { title , pageForHeader, description } = Astro.props;
 	}
 	html {
 		font-family: roboto, sans-serif;
-		background-color: #F6F6F6;
+		background-color: #fff;
+		scroll-behavior: smooth;
 	}
 	body {
 		margin:0px;
@@ -47,5 +48,8 @@ const { title , pageForHeader, description } = Astro.props;
 	main {
 		margin: 0px auto;
 		padding: 0px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 </style>
