height and width added

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -45,10 +45,10 @@
     </div>
     <div id="services--images">
         <div id="services--images--contain">
-            <img id="arch--image" class="active" src="arch.webp" alt="Picture of a historical red bridge" loading="lazy">
-            <img id="history--image" class="" src="history.webp" alt="Picture of classic colonial white house" loading="lazy">
-            <img id="gis--image" class="" src="GIS.webp" alt="Classic weathered map of Hartford" loading="lazy">
-            <img id="cemetery--image" class="" src="cemetery.webp" alt="Image of cemetery being excavated" loading="lazy">
+            <img id="arch--image" class="active" src="arch.webp" alt="Picture of a historical red bridge" loading="lazy" width="350" height="250">
+            <img id="history--image" class="" src="history.webp" alt="Picture of classic colonial white house" loading="lazy" width="350" height="250">
+            <img id="gis--image" class="" src="GIS.webp" alt="Classic weathered map of Hartford" loading="lazy" width="350" height="250">
+            <img id="cemetery--image" class="" src="cemetery.webp" alt="Image of cemetery being excavated" loading="lazy" width="350" height="250">
             <div class="frame"></div>
         </div>  
     </div>
@@ -81,7 +81,7 @@
         background-color: transparent;
         border: 0px solid #fff;
         color: #212121;
-        Margin: 24px 0px;
+        margin: 24px 0px;
         font-weight: 700;
         font-size: 1.5rem;
         text-align: right;
