Added sticky nav

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -82,6 +82,8 @@ links.forEach(link => {
         border-bottom:1px solid #0063A7;
         width: 100%;
         justify-content: center;
+        position: sticky;
+        top:0px;
     }
     #nav--contain{
         display: flex;
