--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -166,6 +166,7 @@
         align-items: center;
         position: relative;
         width:100%;
+        z-index:0;
     }
     #services--images--contain {
         position: relative;
@@ -181,11 +182,11 @@
     #services--images--contain > .frame {
         background-color: transparent;
         height: 234px;
-        width: 326px;
+        width: 330px;
         border: 12px solid #0063A7;
         position: absolute;
         top: -12px;
-        left: 12px;
+        left: 8px;
     }
     /* Mobile Stuff */
     #services--selector--mobile {
@@ -238,8 +239,8 @@
             transform:translate(-8px , 8px);
         }
         #services--images--contain > .frame { 
-            top: -10px;
-            left: 10px;
+            top: -12px;
+            left: 2px;
             
         }
     }
