border-box change and added sectors

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -181,8 +181,8 @@
     }
     #services--images--contain > .frame {
         background-color: transparent;
-        height: 234px;
-        width: 335px;
+        height: 260px;
+        width: 360px;
         border: 12px solid #0063A7;
         position: absolute;
         top: -12px;
@@ -229,8 +229,10 @@
             margin-top:0px;
         }
         #services--images {
-            height: calc(100% + 80px);
+            height: 100%;
             display:flex;
+            align-items: flex-start;
+            padding:40px 0px;
         }
         #services--descs {
             padding:24px 0px 0px 0px;
