--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,9 @@ const { title , pageForHeader, description } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	* {
+		box-sizing: border-box;
+	}
 	:root {
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
@@ -44,6 +47,7 @@ const { title , pageForHeader, description } = Astro.props;
 	}
 	body {
 		margin:0px;
+		width: 100vw;
 	}
 	main {
 		margin: 0px auto;
