--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,7 +1,6 @@
 ---
 
 ---
-
 <section id="services">
     <div id="services--selector">
         <h2>Services</h2>
@@ -24,22 +23,22 @@
     <div id="services--descs">
         <div id="arch" class="services--descs--contain active">
             <h3>Archaeology</h3>
-            <p>Archaeological investigation is undertaken in a phased approach, including assessment of the project area (Phase IA), identification and recordation of archaeological resources (Phase IB), assessment of their National Register eligibility (Phase II), and mitigation of potential impacts to significant archaeological resources through avoidance or data recovery (Phase III). To successfully navigate this process, we employ a variety of strategies including consultation with interested parties, traditional archaeological excavation, remote sensing, GIS applications, construction monitoring, and detailed reporting of findings, among others. All of our projects are conducted in compliance with all Federal, state, and/or local regulations.            </p>
+            <p>Archaeological investigation is undertaken in a phased approach, including assessment of the project area (Phase IA), identification and recordation of archaeological resources (Phase IB), assessment of their National Register eligibility (Phase II), and mitigation of potential impacts to significant archaeological resources through avoidance or data recovery (Phase III). To successfully navigate this process, we employ a variety of strategies including consultation with interested parties, traditional archaeological excavation, remote sensing, GIS applications, construction monitoring, and detailed reporting of findings, among others. All of our projects are conducted in compliance with all Federal, state, and/or local regulations.</p>
             <a href="#">View Case Study</a>
         </div>
         <div id="history" class="services--descs--contain">
             <h3>Architectural History</h3>
-            <p></p>
+            <p>Architectural History is related to the study of historic buildings, structures, objects, and other aspects of the “built environment.” These historic resources oftentimes yield important information about their owner’s/architects, function/technology, and how they have been altered over time. Investigations can typically includes site plans, photographic documentation, measured drawings, architectural analysis and description, and comprehensive literature and archival searches. This effort is typically undertaken to interpret and preserve our collective built heritage, as part of a larger historical account of a particular resource/area, or as part of a mitigation process for a historically significant resource that cannot be avoided by development.</p>
             <a href="#">View Case Study</a>
         </div>
         <div id="gis" class="services--descs--contain">
             <h3>Geophysical Surveys Remote Sensing</h3>
-            <p></p>
+            <p>Our goal in using Geographic Information Systems (GIS) is to help our client better gain an advantage from the large amount of geographic data we have at our disposal. Having this much data at our fingertips allows our firm to identify “up front” any project constraints that may exist. We are the only cultural resources management firm in the region that owns and maintains this amount of data, and we can put it to work for you!</p>
             <a href="#">View Case Study</a>
         </div>
         <div id="cemetery" class="services--descs--contain">
             <h3>Cemetery Evaluation and Excavation</h3>
-            <p></p>
+            <p>Heritage Consultants also offers experience and expertise in cemetery-related studies as part of our client services. We have completed cemetery projects for energy sector, transportation sector, and private sector clients, as well as state agencies. The staff of Heritage Consultants also has formulated and operationalized Unanticipated Discovery Plans in a wide variety of settings, including housing subdivisions, natural gas lines, and electricity utility projects. Heritage Consultants has also undertaken the excavation and recovery of human remains from both small and large cemeteries that have been endangered by infrastructural projects and by natural processes.</p>
             <a href="#">View Case Study</a>
         </div>
     </div>
@@ -56,7 +55,7 @@
 
 <style>
     #services {
-        padding: 64px 80px;
+        padding:80px 80px 64px 80px;
         background-color: #fff;
         display: grid;
         grid-template-columns: auto 1fr auto;
@@ -114,7 +113,7 @@
     }
     #services--block {
         position: absolute;
-        right: -3px;
+        right: -4px;
         top: 112px;
         width: 8px;
         height: 40px;
@@ -130,7 +129,6 @@
     .services--descs--contain{
         max-height:0px;
         overflow-y: hidden;
-        transition: all 500ms ease;
     }
     .services--descs--contain.active{
         max-height:100%;
