added contact form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Services from '../components/Services.astro';
 import Sectors from '../components/Sectors.astro';
 import News from '../components/news.astro';
 import Commited from '../components/Commited.astro';
-
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Heritage Consultants" 
@@ -16,6 +16,7 @@ import Commited from '../components/Commited.astro';
   <Sectors></Sectors>
   <News></News>
   <Commited></Commited>
+  <Contact></Contact>
 </Layout>
 
 <style>
