fix for background in news section contact form

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,10 +6,10 @@
     <div id="contact--form--contain">
         <h2>Contact Us</h2>
         <form name="contact" method="POST" data-netlify="true" id="contact--form">
-            <label class="visually-hidden" for="Fname">First Name:</label><input type="text" name="Fname" placeholder="First name"/>
-            <label class="visually-hidden" for="Lname">Last Name:</label><input type="text" name="Lname"  placeholder="Last name"/>
-            <label class="visually-hidden" for="email">Your Email:</label><input id="emailInput" type="email" name="email" placeholder="Email address" />
-            <label class="visually-hidden" for="message">Message:</label><textarea id="messageInput" name="message" placeholder="Message"></textarea>
+            <label class="visually-hidden" for="Fname">First Name:</label><input type="text" name="First Name" placeholder="First name"/>
+            <label class="visually-hidden" for="Lname">Last Name:</label><input type="text" name="Last Name"  placeholder="Last name"/>
+            <label class="visually-hidden" for="email">Your Email:</label><input id="emailInput" type="email" name="Email Address" placeholder="Email address" />
+            <label class="visually-hidden" for="message">Message:</label><textarea id="messageInput" name="Message" placeholder="Message"></textarea>
             <button type="submit" id="contactSubmit">Email Us</button>
             <a href="tel:860-299-6328" id="contactCall">Call Us</a>
           </form>
