--- a/src/components/news.astro
+++ b/src/components/news.astro
@@ -48,7 +48,7 @@ const posts = entries.items.map((item) => {
         padding:48px;
         position: relative;
         color:#fff;
-        background-image: url('./forrest.webp');
+        background-image: url('./../forrest.webp');
         background-repeat: no-repeat;
         background-size: 100% 50%;
         max-width: 1920px;
