--- a/src/components/Sectors.astro
+++ b/src/components/Sectors.astro
@@ -25,7 +25,7 @@
             <p>Telecom</p>
         </div>       
     </div>
-    <img src="./5sectors.svg" alt="icon of a cellphone tower, school house, house, bus, and electrical pole" class="" id="mobile-sectors">
+    <img src="./5sectors.svg" alt="icon of a cellphone tower, school house, house, bus, and electrical pole" class="" id="mobile-sectors" height="350" width="350">
     
 </section>
 
