--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,11 +13,11 @@ const { title, desc, href, image, tag, type } = Astro.props;
 
 <div class={`card ${type}`}>
 	<p class="card--tag">{tag}</p>
-	<a class="card--image" href={href} style={`background-image: url("${image}"); background-position: center; background-repeat: no-repeat; background-size: cover;`}></a>
+	<a aria-label={`link to article ${title}`} class="card--image" href={href} style={`background-image: url("${image}"); background-position: center; background-repeat: no-repeat; background-size: cover;`}></a>
 	<h4>{title}</h4>
 	<hr>
 	<p class="card--desc">{desc}</p>
-	<a href={href} class="card--button">Read More</a>
+	<a href={href} class="card--button" aria-label={`link to article ${title}`}>Read More</a>
 </div>
 <style>
 	.card {
