--- a/src/components/Commited.astro
+++ b/src/components/Commited.astro
@@ -11,8 +11,8 @@
             <h2>Committed to you</h2>
             <p>Heritage Consultants, LLC, is committed to prioritizing diversity within the field of heritage preservation, not through words, but action. Our team of historians, archaeologists, architectural historians, and heritage preservation practitioners come from a variety of under-represented backgrounds. We are sensitive to the fact that we frequently are responsible for preserving, sharing, educating, and recording other people's history. <strong>We are committed to shared scholarship with community organizations, legacy populations, and scholars specializing in the histories we uncover.</strong></p>
             <div id="committed--buttons">
-                <a href="">Our Team</a>
-                <a href="">Careers</a>
+                <a href="/team">Our Team</a>
+                <a href="/team/#jobs">Careers</a>
             </div>
         </div>
     </div>
