updated smooth scroll

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -40,6 +40,7 @@
         grid-template-columns: auto 1fr;
         padding: 64px; 
         margin-top: 40px;
+        scroll-margin-top: 69px;
     }
     #contact--form--contain{
         background-color: #fff;
