--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,9 +6,9 @@ import { Icon } from 'astro-icon';
     <a href="mailto:DGEORGE@HERITAGE-CONSULTANTS.COM" aria-label="email us at DGEORGE@HERITAGE-CONSULTANTS.COM"><Icon pack="feather" name="mail"/> DGEORGE@HERITAGE-CONSULTANTS.COM</a>
     <a href="geo:41.6279307,-72.74313" target="_blank" aria-label="visit us at 830 BERLIN TPKE, BERLIN, CT 06037"><Icon pack="feather" name="map-pin"/> 830 BERLIN TPKE, BERLIN, CT 06037</a>
     <div class="social">
-        <a href="" aria-label=""><Icon pack="feather" name="facebook"/></a>
-        <a href="" aria-label=""><Icon pack="feather" name="twitter"/></a>
-        <a href="" aria-label=""><Icon pack="feather" name="linkedin"/></a>
+        <a href="https://www.facebook.com/HeritageConsultantsLLC" aria-label="Link to our facebook"><Icon pack="feather" name="facebook"/></a>
+        <!-- <a href="" aria-label="Link to our twitter"><Icon pack="feather" name="twitter"/></a> -->
+        <a href="https://www.linkedin.com/company/heritage-consultants/" aria-label="Link to our Linked In"><Icon pack="feather" name="linkedin"/></a>
     </div>
     <p>Copyright ©2023 Heritage Consultants, LLC</p>
 
