--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -46,7 +46,7 @@ links.forEach(link => {
             {links.map((link) => (
                  <a class={link.class} href={link.link}>{link.label}<span class="slider"></span></a>
             ))}
-           <button type="button" id="nav--contact">Contact Us</button>
+           <a href="/#contact" type="button" id="nav--contact">Contact Us</a>
            <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
