--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -55,11 +55,12 @@
 
 <style>
     #services {
-        padding:80px 80px 64px 80px;
+        padding:64px 80px 64px 80px;
         background-color: #fff;
         display: grid;
         grid-template-columns: auto 1fr auto;
         max-width:1920px;
+        scroll-margin-top: 69px;
     }
     /* --- Services Selectors --- */
     #services--selector {
