--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -95,6 +95,12 @@
 		border:0px solid #fff;
         width:100%;
         cursor: pointer;
+        transition: background-color 200ms ease;
+    }
+
+    #contactSubmit:hover , #contactCall:hover{
+        cursor: pointer;
+        background-color: #004575;
     }
 
     @media only screen and (max-width: 1180px) { 
