--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -157,6 +157,12 @@
         margin-top:32px;
         width: fit-content;
     }
+    .services--descs--contain > a:hover{
+        cursor: pointer;
+        background-color: #004575;
+    }
+
+
     /* --- Services Images --- */
     #services--images {
         height:475px;;
