--- a/src/components/Commited.astro
+++ b/src/components/Commited.astro
@@ -57,6 +57,12 @@
         border:0px solid #fff;
         margin-right:48px;
         width:205px;
+        transition: background-color 200ms ease;
+    }
+
+    #committed--buttons > a:hover {
+        cursor: pointer;
+        background-color: #004575;
     }
     #committed--image {
         justify-self: end;
