--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -60,6 +60,12 @@
         font-size: 1.4rem;
         background-color: #0063A7;
         min-width: 206px;
+        transition: background-color 200ms ease;
+    }
+
+    #hero--buttons > a:hover{
+        cursor: pointer;
+        background-color: #004575;
     }
 
     #hero--buttons > a:first-child {
@@ -72,6 +78,11 @@
         padding:12px 36px;
         font-size: 1.4rem;
         background-color: transparent;
+        transition: border 200ms ease;
+    }
+
+    #hero--buttons > a:first-child:hover {
+        border: 4px solid #0063A7;
     }
 
     @media only screen and (max-width: 700px) { 
