--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,5 +57,6 @@ const { title , pageForHeader, description } = Astro.props;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		width: 100%;
 	}
 </style>
