--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -51,15 +51,14 @@ const { content, title, date, type, imageUrl, imageDesc} = Astro.props;
 const cssURL = `url(/${imageUrl}?w=1100)`;
 ---
 
-<Layout title={} description={} pageForHeader="">
-		<main>
+<Layout title={title} description={`${title} on Heritage Consulants`} pageForHeader="">
       <div class="post">
         <div class="post--title">
           <h1>{title}</h1>
         </div>
         <article class="content" set:html={content} />
+        <p>Posted on {date} Copyright Heritage Consultants, LLC</p>
       </div> 
-    </main>
 </Layout>
 
 <style define:vars={{cssURL}}>
@@ -72,12 +71,13 @@ const cssURL = `url(/${imageUrl}?w=1100)`;
     justify-content: center;
     align-items: center;
     text-align: left;
-		padding: 60px 0px 32px 0px;
-		width: 100%;
+	
+	width: 100%;
     background-color: #FBFBF8;
 	}
 
   .post{
+    padding: 0px 16px 32px 16px;
     max-width: 1100px;
     width: 100%;
   }
